--- a/admin/src/pages/newRoom/newRoom.scss
+++ b/admin/src/pages/newRoom/newRoom.scss
@@ -31,12 +31,13 @@
       
       .right {
         flex: 2;
+        padding: 0px 20px;
 
         form {
           display: flex;
           gap: 30px;
           flex-wrap: wrap;
-          justify-content: space-around;
+          justify-content: space-between;
 
           .formInput {
             width: 40%;
